--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Giuseppe Vassallo | Front End Developer</title>
     <meta name="description" content="Front end developer: Exceptional web experiences with expertise in HTML, CSS, and JavaScript. Explore our work." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="assets/img/og-image.jpg" />
+    <meta property="og:image" content="https://vax-9.github.io/assets/img/og-image.jpg" />
     <meta property="og:title" content="Giuseppe Vassallo | Front End Developer" />
     <meta property="og:description" content="Front end developer: Exceptional web experiences with expertise in HTML, CSS, and JavaScript. Explore our work." />
     <link rel="icon" href="/assets/img/gv-logo.ico" type="image/x-icon" />
