--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
   <title>About</title>
   <meta name="description" content="Front end developer: Exceptional web experiences with expertise in HTML, CSS, and JavaScript. Explore my story." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="assets/img/og-image.jpg" />
+  <meta property="og:image" content="https://vax-9.github.io/assets/img/og-image.jpg" />
   <meta property="og:title" content="Giuseppe Vassallo | Front End Developer" />
   <meta property="og:description" content="Front end developer: Exceptional web experiences with expertise in HTML, CSS, and JavaScript. Explore my story." />
   <link rel="stylesheet" href="/assets/css/style.css">
