--- a/contacts/index.html
+++ b/contacts/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="https://vax-9.github.io/assets/img/og-image.jpg">
   <link rel="shortcut icon" href="/assets/img/gv-logo.ico" type="image/x-icon">
   <title>Contacts</title>
   <meta name="description" content="Front end developer: Exceptional web experiences with expertise in HTML, CSS, and JavaScript. Contact me." />
