--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://vax-9.github.io/assets/img/og-image.jpg" />
     <meta property="og:title" content="Giuseppe Vassallo | Front End Developer" />
-    <meta property="og:description" content="Front end developer: Exceptional web experiences with expertise in HTML, CSS, and JavaScript. Explore our work." />
+    <meta property="og:description" content="Front end developer: Exceptional web experiences with expertise in HTML, CSS, and JavaScript. Explore my work." />
     <link rel="icon" href="/assets/img/gv-logo.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" />
     <link rel="stylesheet" href="assets/css/style.css" />
