--- a/contacts/index.html
+++ b/contacts/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://vax-9.github.io/assets/img/og-image.jpg">
-  <link rel="shortcut icon" href="/assets/img/gv-logo.ico" type="image/x-icon">
   <title>Contacts</title>
   <meta name="description" content="Front end developer: Exceptional web experiences with expertise in HTML, CSS, and JavaScript. Contact me." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="assets/img/og-image.jpg" />
+  <meta property="og:image" content="https://vax-9.github.io/assets/img/og-image.jpg" />
   <meta property="og:title" content="Contacts" />
   <meta property="og:description" content="Front end developer: Exceptional web experiences with expertise in HTML, CSS, and JavaScript. Contact me." />
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="shortcut icon" href="/assets/img/gv-logo.ico" type="image/x-icon">
   <!-- emailjs, migliorerò questo form appena avrò più padronanza di javascript, purtoppo non conoscendo bene il linguaggio non sono ancora in grado di personalizzarlo al 100%. -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script type="text/javascript">
