--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Giuseppe Vassallo | Front End Developer</title>
-    <meta name="description" content="Front end developer: Exceptional web experiences with expertise in HTML, CSS, and JavaScript. Explore our work." />
+    <meta name="description" content="Front end developer: Exceptional web experiences with expertise in HTML, CSS, and JavaScript. Explore my work." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://vax-9.github.io/assets/img/og-image.jpg" />
     <meta property="og:title" content="Giuseppe Vassallo | Front End Developer" />
