--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mtg Life Counter</title>
+  <title>Life Counter</title>
+  <meta name="title" content="Life Counter">
+  <meta name="description" content="The perfect life counter for your game nights!">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Life Counter">
+  <meta property="og:description" content="The perfect life counter for your game nights!">
+  <meta property="og:image" content="https://life-counter-giuseppe-vassallo.netlify.app/assets/img/meta-img.jpg" />
+  <meta property="og:url" content="https://https://life-counter-giuseppe-vassallo.netlify.app/">
+
   <link rel="stylesheet" href="assets/css/styles.css">
   <script src="/assets/script/script.js" defer></script>
 </head>
