--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Life Counter</title>
+  <link rel="icon" type="image/x-icon" href="assets/img/dice.png">
   <meta name="title" content="Life Counter">
   <meta name="description" content="The perfect life counter for your game nights!">
   <meta property="og:type" content="website" />
